--- a/web/stylecart.css
+++ b/web/stylecart.css
@@ -1,4 +1,3 @@
-/* Vos styles existants */
 body {
     font-family: Arial, sans-serif;
     background-image: url(image/fond.png);
@@ -14,14 +13,6 @@ h1 {
     margin-bottom: 20px;
 }
 
-#cart-container {
-    background: white;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: auto;
-}
 
 #product-list, #cart-items {
     display: flex;
@@ -79,24 +70,22 @@ footer {
     color: white;
 }
 
-
 .remove-btn {
-    background-color: #2ecc71; /* Couleur de fond rouge */
-    color: white; /* Couleur du texte */
-    border: none; /* Retirer les bordures */
-    padding: 10px 20px; /* Espacement interne */
-    font-size: 16px; /* Taille du texte */
-    cursor: pointer; /* Changer le curseur au survol */
-    border-radius: 5px; /* Coins arrondis */
-    transition: background-color 0.3s, transform 0.2s; /* Animation lors du survol */
+    background-color: #2ecc71;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 1s, transform 0.5s;
 }
 
-/* Effet au survol du bouton */
 .remove-btn:hover {
-    background-color: #c0392b; /* Couleur de fond rouge plus foncé */
+    background-color: #c0392b;
     transform: scale(1.05);
 }
 
 .remove-btn:active {
-    transform: scale(0.98); 
+    transform: scale(0.98);
 }
